--- a/CubeTransition/CubeTransition-Info.plist
+++ b/CubeTransition/CubeTransition-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.sony.ux.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.veronicasoft.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
